# Enhance

./: .gitignore  CMakeLists.txt  Contributing.md  License.md  README.md  Release Notes.md
.github/workflows/: AllTests.yml  ExampleCompile.yml  Test.yml  UnitTest.yml
Perf/: date_add.txt
auto-test/: Confined.test.cpp  Error.test.cpp  General.test.cpp  QProc.test.cpp  QueuedHandler.test.cpp  Timer.test.cpp  compile.bat  main.test.cpp  test.base.h
doc/: classenh_1_1counter.html  classenh_1_1error__base.html  classenh_1_1queued__process-members.html  classenh_1_1timer.html  classenh_1_1version__info.html  dir_0bb4bacb73d7f86c6a963ab22a4f5c20.html  framework_8enh_8h.html  functions.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  logger_8cpp.html  namespacedebug.html  namespaceenh.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_type.html  namespaces.html  structenh_1_1quad__instruct-members.html  structenh_1_1quad__instruct.html
doc/search/: all_10.js  all_5.js  all_9.js  all_b.js  classes_2.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_5.js  enums_0.js  enums_1.js  files_0.js  functions_1.js  functions_11.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_f.js  namespaces_0.js  namespaces_1.js  typedefs_0.js  typedefs_4.js  typedefs_5.js  variables_0.js  variables_3.js  variables_6.js  variables_7.js
docs/: annotated.html  classenh_1_1_date_time-members.html  classenh_1_1_date_time.html  classenh_1_1_numeric_system-members.html  classenh_1_1_numeric_system.html  classenh_1_1blank__t.html  classenh_1_1confined__base-members.html  classenh_1_1confined__base.html  classenh_1_1counter-members.html  classenh_1_1counter.html  classenh_1_1dt__type_1_1day__t-members.html  classenh_1_1dt__type_1_1day__t.html  classenh_1_1dt__type_1_1yearday__t-members.html  classenh_1_1dt__type_1_1yearday__t.html  classenh_1_1error__base-members.html  classenh_1_1error__base.html  classenh_1_1queued__process-members.html  classenh_1_1queued__process.html  classenh_1_1time__stamp-members.html  classenh_1_1time__stamp.html  classenh_1_1timer-members.html  classenh_1_1timer.html  classenh_1_1version__info-members.html  classenh_1_1version__info.html  classes.html  common_8enh_8h.html  confined_8enh_8h.html  counter_8enh_8h.html  date_8enh_8h.html  date__time_8enh_8h.html  dir_0bb4bacb73d7f86c6a963ab22a4f5c20.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  error__base_8enh_8h.html  files.html  framework_8enh_8h.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  general_8enh_8h.html  (+26 more)
docs/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enumvalues_0.js  (+61 more)
documentation/: enhance.doxy  enhance.tag
documentation/examples/: Counter.ex.cpp  Date.ex.cpp  DateTime.ex.cpp  DateTime_ex.cpp  ErrorTracker.ex.cpp  QueuedHandler.ex.cpp  TimeStamp.ex.cpp  Timer.ex.cpp  compile.bat  confined_base_ex.cpp  counter_ex.cpp  date_ex.cpp  error_base_ex.cpp  logger.dbg.ex.cpp  logger.ndbg.ex.cpp  logger_dbg_ex.cpp  logger_ndbg_ex.cpp  main.ex.cpp  queued_process_ex.cpp  time_stamp_ex.cpp  timer_ex.cpp  tristate_ex.cpp  version_info_ex.cpp
src/: logger.cpp
src/Header/: ConfinedValue.enh.h  DateTime.enh.h  ErrorTracker.enh.h  LimitedNumber.enh.h  QueuedHandler.enh.h  QueuedProcess.enh.h  TimeStamp.enh.h  Tristate.enh.h  VersionInfo.enh.h  WeightedField.enh.h  common.enh.h  confined.enh.h  counter.enh.h  date.enh.h  date_time.enh.h  error_base.enh.h  framework.enh.h  general.enh.h  logger.enh.h  numeral_system.enh.h  queued_process.enh.h  time_stamp.enh.h  timer.enh.h
